# osc_test

./: .gitignore  README.md  example_notebook.ipynb  pixi.toml  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
cli/: generate_embeddings.py
earthcode/: fairtool.py  git_add.py  gitclerk_add.py  metadata_input_definitions.py  osc_clean.py  prr.py  search.py  static.py  validator.py
earthcode/schemas/: catalog.json  collection.json  contacts.json  license.json  osc.json  records.json  themes.json
earthcode/schemas/eo-missions/: children.json
earthcode/schemas/experiments/: children.json  parent.json
earthcode/schemas/products/: children.json
earthcode/schemas/projects/: children.json
earthcode/schemas/themes/: children.json
earthcode/schemas/variables/: children.json
examples/: 4datlantic-hc.ipynb  add_through_pull_request.ipynb  antarctic.ipynb  contribute_via_osc_editor.ipynb  contribute_via_pr_osc.ipynb  create_OSC_entries.ipynb  earthcode_data_discovery.ipynb  earthcode_publishing_guide.ipynb  example_create_osc_entries.ipynb  example_notebook.ipynb  glambie_notebook_osc.ipynb  searching_example.ipynb
examples/.ipynb_checkpoints/: contribute_via_pr_osc-checkpoint.ipynb  glambie_notebook_osc-checkpoint.ipynb
guide/: 0.Prerequisites.ipynb  0.Prerequisits.ipynb  1.Project.ipynb  2.0.Product.ipynb  2.1.Product_files_PRR.ipynb  2.1.Product_files_self_hosted.ipynb  2.Product.ipynb  3.Workflow.ipynb  4.Experiment.ipynb
tests/: test_creation.py  test_fairtool.py  test_notebooks.py  test_prr.py  test_search.py  test_validation.py
(+2 files in other folders)
