[project]
name = "earthcode"
version = "0.1.0"
dependencies = [
    "jupyterlab>=4.5.0,<5",
    "pystac>=1.14.1,<2",
    "xarray>=2025.12.0,<2026",
    "shapely>=2.1.2,<3",
    "xstac>=1.2.0,<2",
    "fastembed>=0.7.4,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["earthcode"]
