[project]
name = "earthcode"
version = "0.1.0"
dependencies = [
    "pystac>=1.14.1,<2",
    "xarray>=2025.12.0,<2026",
    "shapely>=2.1.2,<3",
    "xstac>=1.2.0,<2",
    "zarr>=3.1.5,<4",
    "dask>=2025.12.0,<2026",
    "netcdf4>=1.7.3,<2",
    "bottleneck>=1.6.0,<2",
    "rioxarray>=0.20.0,<0.21",
    "pytest>=9.0.2,<10",
    "geopandas>=1.1.2,<2",
    "pyarrow>=23.0.0,<24",
    "lancedb>=0.21.1,<0.22",
    "pillow>=10.3,<12",
    "fastembed>=0.7.4,<0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["earthcode"]